nav isssue and alignment issues rectified

--- a/assets/css/rental-services-details.css
+++ b/assets/css/rental-services-details.css
@@ -2,12 +2,16 @@
     property section css
  ===========================*/
 @media (min-width: 600px) {
-  .container-fluid {
+  .container-fluidrent {
     margin-left: 60px;
     margin-right: 60px;
   }
 }
-
+.container-fluidrent {
+    padding-right: 15px;
+    padding-left: 15px;
+    
+}
 .property {
   margin-top: 20px;
   margin-bottom: 30px;
@@ -29,7 +33,7 @@
 }
 
 .rent-price-box {
-  margin-top: 50px;
+  margin-top: 21px;
   border: 1px solid #ff9719;
   border-radius: 5px;
   padding: 20px;
@@ -170,7 +174,7 @@
 
 .container_amn {
   padding-right: 0px;
-  width: 100%;
+  width: 90%;
 }
 
 @media (max-width: 600px) {
@@ -358,3 +362,4 @@ ul_de li::before {
   margin-top: 20px;
   margin-bottom: 30px;
 }
+
